# KohakuNodeIR

./: .gitignore  LICENSE  README.md  pyproject.toml
app/backend/: builtin_nodes.py  execution.py  main.py  node_store.py
app/frontend/: package-lock.json  package.json  (+1 more)
docs/: api.md  architecture.md  example.kir  getting_started.md  kirgraph_spec.md  layout_research.md  scoped_dataflow_example.kir  spec.md
examples/: README.md  basic_math.kir  branching.kir  graph.kirgraph  kirgraph_demo.py  kirgraph_example.json  mixed_demo.py  mixed_example.kir  mixed_example.kirgraph  mixed_mode.kir  parallel_demo.py  string_processing.py
kir-editor/: README.md
kohakunodeui/: package.json  vite.config.js
scripts/: README.md  build-wasm.sh
server/: builtin_nodes.py  execution.py  node_store.py
src/kohakunode-rs/: Cargo.toml  README.md  pyproject.toml
src/kohakunode-rs/src/: lib.rs  pyo3_module.rs  wasm_module.rs
src/kohakunode-rs/src/analyzer/: mod.rs  pyo3.rs
src/kohakunode-rs/src/ast/: mod.rs  pyo3.rs  types.rs
src/kohakunode-rs/src/compiler/: dataflow.rs  dead_code.rs  mod.rs  optimizer.rs  pyo3.rs  sanitizer.rs  strip_meta.rs  type_check.rs
src/kohakunode-rs/src/kirgraph/: compiler.rs  decompiler.rs  mod.rs  pyo3.rs
src/kohakunode-rs/src/layout/: auto_layout.rs  mod.rs  optimizer.rs  pyo3.rs  score.rs
src/kohakunode-rs/src/parser/: indentation.rs  kir.pest  mod.rs  pyo3.rs
src/kohakunode-rs/src/serializer/: mod.rs  pyo3.rs
tests/: conftest.py  test_rust_integration.py
tree-sitter-kir/: README.md  grammar.js  package-lock.json  package.json
(+371 files in other folders)
