[package]
name = "kohakunode-rs"
version = "0.1.0"
edition = "2021"
description = "Rust core for KohakuNodeIR — parser, compiler, layout"

[lib]
name = "kohakunode_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2"
pest_derive = "2"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = ["pyo3"]
python = ["pyo3"]
